# open_dateaubase

./: .dockerignore  .env.docker  .env.docker.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  EXTENSION-PLAN.md  LICENSE  README.md  SECOND_EXTENSION_PLAN.md  conftest.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
api/: config.py  database.py  main.py
api_metadata/: app.py  db.py  main.py  metadata_resolver.py  test_ingest.py  test_metadata_resolver.py  ui_style.py
archived_scripts/: 2025-09-08_as-built_mssql.sql  v0_as-designed_mssql.sql
docs/: index.md
migrations/: v1.0.0_create_mssql.sql  v1.0.0_to_v1.0.1_mssql.sql  v1.0.0_to_v1.0.1_mssql_rollback.sql  v1.0.1_to_v1.0.2_mssql.sql  v1.0.1_to_v1.0.2_mssql_rollback.sql  v1.0.2_to_v1.1.0_mssql.sql  v1.0.2_to_v1.1.0_mssql_rollback.sql  v1.1.0_to_v1.2.0_mssql.sql  v1.1.0_to_v1.2.0_mssql_rollback.sql  v1.2.0_to_v1.3.0_mssql.sql  v1.2.0_to_v1.3.0_mssql_rollback.sql  v1.3.0_to_v1.4.0_mssql.sql  v1.3.0_to_v1.4.0_mssql_rollback.sql  v1.4.0_to_v1.5.0_mssql.sql  v1.4.0_to_v1.5.0_mssql_rollback.sql  v1.5.0_to_v1.6.0_mssql.sql  v1.5.0_to_v1.6.0_mssql_rollback.sql  v1.6.0_to_v1.7.0_mssql.sql  v1.6.0_to_v1.7.0_mssql_rollback.sql  v1.7.0_to_v1.8.0_mssql.sql  v1.7.0_to_v1.8.0_mssql_rollback.sql
schema_dictionary/: format_version.yaml  version.yaml
scripts/: copy_assets.py  csv_to_json.py  generate_dictionary_reference.py  generate_erd.py  generate_from_yaml.py  generate_sql.py  generate_yaml_tables.py  init_db.py  orchestrate_docs.py  remove_fk_target.py  remove_parts_table.py
sql/: init.sql  (+9 more)
(+190 files in other folders)
