[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-dateaubase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "pydantic>=2.0.0",
    "mkdocs-gen-files>=0.5.0",
    "markdown-exec>=1.12.1",
    "pymdown-extensions>=10.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]
db = [
    "pyodbc>=5.1",
]

[tool.pytest.ini_options]
markers = [
    "db: requires running MSSQL Docker container",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
open_dateaubase = ["*.json", "dictionary.json"]
